# bevy_init_marker

./: Cargo.toml  README.md
src/: lib.rs
