[package]
name = "bevy_init_marker"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "gamedev", "helpers"]
description = "A marker `Resource` for *something* that has been initialized."
repository = "https://github.com/atornity/bevy_init_marker"

[dependencies]
bevy_ecs = "0.13.2"
bevy_reflect = "0.13.2"
bevy_log = "0.13.2"

[dev-dependencies]
bevy = "0.13.2"
